@@ -46,6 +46,7 @@
             "Exporter" : "5.57",
             "IO::Handle" : "0",
             "JSON::PP" : "0",
+            "Time::Local" : "0",
             "perl" : "5.008001"
          }
       },
