@@ -21,7 +21,8 @@ my %WriteMakefileArgs = (
     "Encode" => 0,
     "Exporter" => "5.57",
     "IO::Handle" => 0,
-    "JSON::PP" => 0
+    "JSON::PP" => 0,
+    "Time::Local" => 0
   },
   "TEST_REQUIRES" => {
     "ExtUtils::MakeMaker" => 0,
@@ -45,7 +46,8 @@ my %FallbackPrereqs = (
   "IO::Handle" => 0,
   "JSON::PP" => 0,
   "MIME::Base64" => 0,
-  "Test::More" => "0.96"
+  "Test::More" => "0.96",
+  "Time::Local" => 0
 );
 
 
