@@ -112,12 +112,6 @@ L<JSON::PP>. CGI scripts that deal with JSON content will greatly benefit from
 installing L<Cpanel::JSON::XS> version C<4.09> or newer for efficient encoding
 and decoding, which will be used automatically if available.
 
-=head2 Dates
-
-Dates used in HTTP headers (e.g. C<Date>, C<Expires>, and the C<Expires>
-attribute for cookies) are expected in RFC 1123 format in GMT. L<HTTP::Date> or
-L<Mojo::Date> can be used to parse or render this date format.
-
 =head2 Templating
 
 HTML and XML responses are most easily managed with templating. A number of
@@ -512,9 +506,8 @@ Domain for which cookie is valid.
 
 =item Expires
 
-Expiration date string for cookie. L<HTTP::Date/time2str> or
-L<Mojo::Date/to_string> can be used to generate the appropriate date string
-format.
+Expiration date string for cookie. L</"epoch_to_date"> can be used to generate
+the appropriate date string format.
 
 =item HttpOnly
 
@@ -600,6 +593,26 @@ C<redirect> will print a redirection header if response headers have not yet
 been rendered, and will set a response status of 302 if none has been set by
 L</"set_response_status">. It will not set a C<Content-Type> response header.
 If response headers have already been rendered a warning will be emitted.
+
+=head1 FUNCTIONS
+
+The following convenience functions are provided but not exported.
+
+=head2 epoch_to_date
+
+  my $date = CGI::Tiny::epoch_to_date $epoch;
+
+Convert a Unix epoch timestamp to a RFC 1123 HTTP date string suitable for use
+in date and expiration headers.
+
+=head2 date_to_epoch
+
+  my $epoch = CGI::Tiny::date_to_epoch $date;
+
+Parse a RFC 1123 HTTP date string to a Unix epoch timestamp. For compatibility
+as required by L<RFC 7231|https://tools.ietf.org/html/rfc7231#section-7.1.1.1>,
+legacy RFC 850 and ANSI C asctime date formats are also recognized. Returns
+C<undef> if the string does not parse as one of these formats.
 
 =head1 ENVIRONMENT
 
