@@ -6,6 +6,7 @@ runtime:
     Exporter: '5.57'
     IO::Handle: 0
     JSON::PP: 0
+    Time::Local: 0
   recommends:
     Cpanel::JSON::XS: '4.09'
 test:
